# machine-configuration

./: .gitignore  README.md  configuration.nix  fish.nix  flake.nix  gnome-and-terminal.nix  home.nix  keymap.xkb  persistent-ssh-tunnel.nix  terminal-env.nix  terminal-environment.nix  wg-network.nix  wireguard-to-vps.nix
devlog-player/: Cargo.toml  flake.nix  run.sh
devlog-player/src/: app.rs  aw.rs  cast.rs  lib.rs  main.rs  termview.rs  transcript.rs
dotfiles/: .Xmodmap  .Xresources  .xbindkeysrc  .xmobarrc
machines/: farm-server-digital-configuration.nix  farm-server-digital-hardware-configuration.nix  farm-server-hardware-configuration.nix  farm-server-wyse-hardware-configuration.nix  mammoth3-nixos-infect-module.nix  p14-hardware-configuration.nix  peanut-butter-toast-hardware-configuration.nix  shop-server-z230-configuration.nix  shop-server-z230-hardware-configuration.nix  x1-old-mate-configuration.nix  yoga-260-keenbean-configuration.nix
patches/: asciinema-forward-pixel-size.patch
scripts/: aw-watcher-niri.py  bluetooth-status.sh  enable_keyboard_mouse_scroll.sh  locate_lib_in_search_path.sh  lock.sh  network-status-ipaddr.sh  network-status-rss.sh  network-status-ssid.sh  network-status.sh  nix-add-custom-gcroots.sh  nixify-mammoth-vps.sh  nixify-vps.sh  qrcode.sh  rotate-webcam.sh  screenshot-region.sh  screenshot.sh  setup_external_monitor.sh  toggle_mic_mute.sh  wakeup.sh
secrets/: autofarm-frontend-server-basic-auth-credentials.age  b2-credentials.age  coolroom-monitor-influxdb-password.age  coolroom-monitor-relay-sys.config.age  secrets.nix  (+14 more)
(+24 files in other folders)
